# chip8

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  opcodes.txt
docs/: 0.bootstrap.js  1.bootstrap.js  bootstrap.js
src/: lib.rs  machine.rs  opcode.rs  roms.rs
src/emulator/: machine.rs  mod.rs  opcode.rs
src/emulator/context/: mod.rs  sdl.rs  wasm.rs
src/emulator/context/wasm/: dom.rs  macros.rs  mod.rs  wasm_context.rs
src/emulator/machine/: context.rs  mod.rs  test.rs
src/emulator/opcode/: mod.rs  test.rs
src/machine/: machine.rs  mod.rs  opcode.rs
www/: index.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  webpack.config.js
www/src/: index.html  index.js  styles.css
