[package]
name = "chip8"
version = "0.1.0"
authors = ["Ben Lovy <ben@deciduously.com>"]
edition = "2018"
description = "\"Yet Another\" Rust/WASM Chip8 Emulator."
readme = "README.md"
repository = "https://github.com/deciduously/chip8"
license = "BSD-3-Clause"
keywords = ["emulators", "games", "toy", "wasm"]
categories = ["emulators", "games"]

[dependencies]

anyhow = "1.0"
hex = "0.4"
rand = "0.7"

[dev-dependencies]

pretty_assertions = "0.6"