[package]
name = "chip8"
version = "0.1.0"
authors = ["Ben Lovy <ben@deciduously.com>"]
edition = "2018"
description = "\"Yet Another\" Rust/WASM Chip8 Emulator."
readme = "README.md"
repository = "https://github.com/deciduously/chip8"
license = "BSD-3-Clause"
keywords = ["emulators", "games", "toy", "wasm"]
categories = ["emulators", "games"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "native"
required-features = ["sdl"]

[features]

default = []

# The native SDL renderer is feature gated
sdl = ["rand", "sdl2", "structopt"]

# So is WebAssembly.  Users should specify which to build.
wasm = ["console_error_panic_hook","js-sys", "wasm-bindgen", "web-sys"]

[dependencies]

anyhow = "1.0"
lazy_static = "1.4"
hex = "0.4"

[dependencies.console_error_panic_hook]

version = "0.1"
optional = true

[dependencies.js-sys]

version = "0.3"
optional = true

[dependencies.rand]

version = "0.8"
optional = true

[dependencies.sdl2]

version = "0.34"
optional = true
default-features = false
features = ["image","gfx","mixer"]

[dependencies.structopt]

version = "0.3"
optional = true
default-features = false

[dependencies.wasm-bindgen]

version = "0.2"
optional = true

[dependencies.web-sys]

version = "0.3"
optional = true
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlSelectElement",
    "Node",
    "Text",
    "Window"
]

[dev-dependencies]

pretty_assertions = "0.6"